Updated ajaxcars, xmltest, realtime.php Unit 12 In-class exerises

--- a/demo/ajaxcars.html
+++ b/demo/ajaxcars.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Car dropdown test</title>
+    <p> Josue Ortiz, IT202-001, Internet Applications, Unit 12 In-Class Excercise, jxo@njit.edu, 11/19/2025</p> 
+    <title>Car dropdown test</title></p>
     <script>
         function getmodels() {
             var select = document.getElementById("make");
