--- a/demo/xmltest.html
+++ b/demo/xmltest.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+        <p> Josue Ortiz, IT202-001, Internet Applications, Unit 12 In-Class Excercise, jxo@njit.edu, 11/19/2025</p> 
     <title>XML test</title>
     <script>
         function getcars() {
